--- a/HovText/packages.config
+++ b/HovText/packages.config
@@ -1,5 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NHotkey" version="2.1.0" targetFramework="net48" />
-  <package id="NHotkey.WindowsForms" version="2.1.0" targetFramework="net48" />
+  <package id="HotkeyListener" version="1.8.0" targetFramework="net48" />
 </packages>
