--- a/HovText/packages.config
+++ b/HovText/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="HotkeyListener" version="1.8.0" targetFramework="net48" />
+  <package id="Costura.Fody" version="4.1.0" targetFramework="net48" />
+  <package id="Fody" version="6.3.0" targetFramework="net48" developmentDependency="true" />
+  <package id="NHotkey" version="2.1.0" targetFramework="net48" />
+  <package id="NHotkey.WindowsForms" version="2.1.0" targetFramework="net48" />
 </packages>
