--- a/HovText/HovText.csproj
+++ b/HovText/HovText.csproj
@@ -80,11 +80,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="History.cs">
+    <Compile Include="HistoryList.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="History.Designer.cs">
-      <DependentUpon>History.cs</DependentUpon>
+    <Compile Include="HistoryList.Designer.cs">
+      <DependentUpon>HistoryList.cs</DependentUpon>
     </Compile>
     <Compile Include="HotkeyConflict.cs">
       <SubType>Form</SubType>
@@ -111,8 +111,8 @@
     <Compile Include="Update.Designer.cs">
       <DependentUpon>Update.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="History.resx">
-      <DependentUpon>History.cs</DependentUpon>
+    <EmbeddedResource Include="HistoryList.resx">
+      <DependentUpon>HistoryList.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="HotkeyConflict.resx">
       <DependentUpon>HotkeyConflict.cs</DependentUpon>
