--- a/HovText/packages.config
+++ b/HovText/packages.config
@@ -2,6 +2,11 @@
 <packages>
   <package id="Costura.Fody" version="4.1.0" targetFramework="net48" />
   <package id="Fody" version="6.3.0" targetFramework="net48" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="3.3.2" targetFramework="net48" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.VersionCheckAnalyzer" version="3.3.2" targetFramework="net48" developmentDependency="true" />
+  <package id="Microsoft.CodeQuality.Analyzers" version="3.3.2" targetFramework="net48" developmentDependency="true" />
+  <package id="Microsoft.NetCore.Analyzers" version="3.3.2" targetFramework="net48" developmentDependency="true" />
+  <package id="Microsoft.NetFramework.Analyzers" version="3.3.2" targetFramework="net48" developmentDependency="true" />
   <package id="NHotkey" version="2.1.0" targetFramework="net48" />
   <package id="NHotkey.WindowsForms" version="2.1.0" targetFramework="net48" />
 </packages>
