--- a/HovText/packages.config
+++ b/HovText/packages.config
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Costura.Fody" version="5.7.0" targetFramework="net48" developmentDependency="true" />
-  <package id="Fody" version="6.6.4" targetFramework="net48" developmentDependency="true" />
+  <package id="Fody" version="6.7.0" targetFramework="net48" developmentDependency="true" />
   <package id="Microsoft.CodeAnalysis.NetAnalyzers" version="7.0.1" targetFramework="net48" developmentDependency="true" />
   <package id="Microsoft.NETCore.Platforms" version="7.0.2" targetFramework="net48" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
   <package id="NHotkey" version="2.1.0" targetFramework="net48" />
   <package id="NHotkey.WindowsForms" version="2.1.0" targetFramework="net48" />
 </packages>
