--- a/HovText/packages.config
+++ b/HovText/packages.config
@@ -6,6 +6,7 @@
   <package id="Microsoft.NETCore.Platforms" version="7.0.2" targetFramework="net48" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
-  <package id="NHotkey" version="2.1.0" targetFramework="net48" />
-  <package id="NHotkey.WindowsForms" version="2.1.0" targetFramework="net48" />
+  <package id="NHotkey" version="2.1.1" targetFramework="net48" />
+  <package id="NHotkey.WindowsForms" version="2.1.1" targetFramework="net48" />
+  <package id="SecurityCodeScan.VS2019" version="5.6.7" targetFramework="net48" developmentDependency="true" />
 </packages>
