--- a/HovText/HovText.csproj
+++ b/HovText/HovText.csproj
@@ -104,6 +104,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Management" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -198,9 +199,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\Square_New_Hotkey_48x48.ico" />
-    <None Include="Resources\Square_New_Inactive_48x48.ico" />
-    <None Include="Resources\Square_New_Active_48x48.ico" />
+    <None Include="Resources\Square_New_Inactive_Edited_48x48.ico" />
+    <None Include="Resources\Square_New_Hotkey_Edited_48x48.ico" />
+    <None Include="Resources\Square_New_Active_Edited_48x48.ico" />
     <None Include="Resources\Square_Old_Hotkey_16x16.ico" />
     <None Include="Resources\Square_Old_Inactive_16x16.ico" />
     <None Include="Resources\Square_Old_Active_16x16.ico" />
