--- a/HovText/HovText.csproj
+++ b/HovText/HovText.csproj
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\packages\ILRepack.2.0.26\build\ILRepack.props" Condition="Exists('..\packages\ILRepack.2.0.26\build\ILRepack.props')" />
+  <Import Project="..\packages\ILRepack.2.0.27\build\ILRepack.props" Condition="Exists('..\packages\ILRepack.2.0.27\build\ILRepack.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -320,17 +320,17 @@ REM cmd /c "d: &amp;&amp; cd D:\Data\Development\Visual Studio\HovText\HovText\b
   <PropertyGroup>
     <PostBuildEvent>REM Pack EXE with ILRepack
 REM ---
-"$(SolutionDir)packages\ILRepack.2.0.26\tools\ILRepack.exe" /out:"$(TargetDir)HovText.exe" "$(TargetPath)" "$(TargetDir)Guna.UI2.dll" "$(TargetDir)NHotkey.dll" "$(TargetDir)NHotkey.WindowsForms.dll"
+"$(SolutionDir)packages\ILRepack.2.0.27\tools\ILRepack.exe" /out:"$(TargetDir)HovText.exe" "$(TargetPath)" "$(TargetDir)Guna.UI2.dll" "$(TargetDir)NHotkey.dll" "$(TargetDir)NHotkey.WindowsForms.dll"
 
 REM Sign EXE
 REM ---
-signtool.exe sign /fd sha256 /tr http://ts.ssl.com /td sha256 /n "Dennis Helligsø" "$(TargetPath)"
+rem signtool.exe sign /fd sha256 /tr http://ts.ssl.com /td sha256 /n "Dennis Helligsø" "$(TargetPath)"
 </PostBuildEvent>
   </PropertyGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\packages\ILRepack.2.0.26\build\ILRepack.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\ILRepack.2.0.26\build\ILRepack.props'))" />
+    <Error Condition="!Exists('..\packages\ILRepack.2.0.27\build\ILRepack.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\ILRepack.2.0.27\build\ILRepack.props'))" />
   </Target>
 </Project>
